--- a/_posts/2017-04-13-js-format.md
+++ b/_posts/2017-04-13-js-format.md
@@ -1,5 +1,10 @@
-<link href="assets/css/page.css" rel="stylesheet" />
-# js-format
+---
+layout: post
+title: js-format
+---
+
+{{ page.title }}
+===
 
 >
     /** * 替换所有匹配exp的字符串为指定字符串 * @param exp 被替换部分的正则 * @param newStr 替换成的字符串 */
