--- a/_posts/2017-04-13-markdown.md
+++ b/_posts/2017-04-13-markdown.md
@@ -1,4 +1,11 @@
-<link href="assets/css/page.css" rel="stylesheet" />
+---
+layout: post
+title: Markdown
+---
+
+{{ page.title }}
+===
+
 1. 斜体和粗体
     *斜体* 或者 _斜体_
     **加粗**
