update footer update markdown post

--- a/_posts/2017-04-16-markdown.md
+++ b/_posts/2017-04-16-markdown.md
@@ -151,7 +151,7 @@ title: Markdown
     14.4 HTML代码
     第一个例子：
     <div class="footer">
-        &copy; 2017 Foo Corporation
+        &copy; 2017 Norton Li
     </div>
     第二个列子：
     <table>
