test code highlight

--- a/_posts/2017-04-13-js-format.md
+++ b/_posts/2017-04-13-js-format.md
@@ -8,10 +8,11 @@ title: js-format
 
 >
     /** * 替换所有匹配exp的字符串为指定字符串 * @param exp 被替换部分的正则 * @param newStr 替换成的字符串 */
+    {% highlight javascript %}
     String.prototype.replaceAll = function (exp, newStr) {
       return this.replace(new RegExp(exp, "gm"), newStr);
     };
- 
+    {% endhighlight %}
 
 >
     * 原型：字符串格式化
