--- a/_posts/2017-07-10-vue-1.md
+++ b/_posts/2017-07-10-vue-1.md
@@ -1,10 +1,13 @@
 ---
 layout: post
-title: Vue.js的生命周期
+title: 什么是Vue.js
 category: Vue.js
 ---
 
 {{ page.title }}
 ===
+> Vue.js是专注构建数据驱动的web界面库，重点集中在MVVM模式的viewmodel层，在实际使用中，完全可以单独用于数据绑定，所以融合在现有项目中也非常容易，这也是Vue.js的优势之一。
 
-![content-image]({{ BASE_PATH }}\articles\assets\images\2017-doc\201707\lifecycle.png)
+Vue的核心库只关注视图层，与传统的jQuery手动操作DOM相比，jQuery的操作大多是命令式的，重复的，而且是易错的。Vue.js拥抱数据驱动的视图概念，也就是说，在普通的HTML模版中使用特殊的语法会将DOM "绑定"到底层数据。
+
+![content-image]({{ BASE_PATH }}\articles\assets\images\2017-doc\201707\mvvm.png)
