--- a/_posts/2017-07-13-vue-5-Vue的数据绑定语法.md
+++ b/_posts/2017-07-13-vue-5-Vue的数据绑定语法.md
@@ -42,3 +42,21 @@ vue的指令是带有v-前缀的特殊特性。本质就是一个特殊标记，
 {% endhighlight %}
 指令中使用数据对象不需要加{%raw%}{{}}{%endraw%}
 vue的指令api请参考[http;//cn.vuejs.org/api/#指令](http;//cn.vuejs.org/api/#指令)
+
+6\. 计算属性
+表达式在模版试用于简单的操作，如果有过多的逻辑，会让表达式难以维护，这个时候可以考虑使用计算属性。
+vue中使用computed选项定义计算属性。
+{% highlight javascript %}
+   var vm = new Vue({
+        el: '#app',
+        data: {},
+        computed: {
+            // 一个计算属性的 getter
+            getFullName: function () {
+            // `this` 指向 vm 实例
+            //逻辑处理
+                return data;
+            }
+        }
+    })
+{% endhighlight %}
