--- a/_posts/2017-11-24-子洲人个个争夺魁.md
+++ b/_posts/2017-11-24-子洲人个个争夺魁.md
@@ -14,7 +14,7 @@ category: Blog
 </head>
 
 <body>
-    <span>李正一作品</span>
+    <span>李天一作品</span>
     <div>
     <video width="100%" height="100%" controls="controls"  autoplay           poster="http://www.zizhou.gov.cn/upload/CMSzizhou/201711/20171123viyieuba7y.jpg">
      <source src="http://www.zizhou.gov.cn/upload/CMSzizhou/201711/201711230951012.mp4" type="video/mp4">
