--- a/_posts/2017-08-07-webpack.md
+++ b/_posts/2017-08-07-webpack.md
@@ -1,28 +1,255 @@
 ---
-layout: post
+layout: 'pptLayout'
 title: Webpack - 前端模块化打包工具
-category: 工具
+category: Share
+tags: Share Webpack
 ---
+<head>
+<link rel="stylesheet" href="{{ BASE_PATH }}/articles/assets/css/theme/white.css">
+</head>
+<body>
+	<div transition-type="slide" class="reveal">
+		<div class="slides">
+			<section>
+				<div class="logo"><img src="{{ BASE_PATH }}\articles\assets\images\2017-doc\201711\webpack-logo.png"></div>
+				<div>Webpack</div>
+                <div>MODULE BUNDLER</div>
+			</section>
+			<section>
+				<div class="head">什么是Webpack</div>
+				<div class="content">前端应用程序的模块化打包器</div>
+			</section>
+			<section data-background="#2b3a42">
+				<div><img src="{{ BASE_PATH }}\articles\assets\images\2017-doc\201711\processor.png"></div>
+			</section>
+			<section>
+                <div class="head">为什么要用Webpack</div>
+                <div class="content">
+                    <div>构建功能丰富的前端应用，拥有复杂的js代码和大量的依赖包。</div>
+                    <div>一些简化开发复杂度的实践：</div>
+                </div>
+                <div class="sub-content" data-markdown data-template>
+                <script type="text/template">
+                    - 模块化 – 将复杂的程序细化成众多小文件
+                    - js扩展语言 – TypeScript 
+                    - css预处理器 – less scss等
+                    - ...
+                </script>
+				</div>
+			</section>
+			<section>
+				<div class="head">为什么要用Webpack</div>
+                <div class="content">
+                    <div>上述的方式可以大大提高开发效率，但是浏览器并不能直接识别这些扩展语言开发的文件！</div>
+                    <div>打包类工具的出现</div>
+                    <div>其他流行的的打包工具：Gulp、Grunt</div>
+                </div>
+			</section>
+            <section>
+                <div class="head">Webpack和Grunt/Gulp的比较</div>
+                <div class="content">
+                    Grunt/Gulp 是一种能够优化前端开发流程的工具
+                    <img src="{{ BASE_PATH }}\articles\assets\images\2017-doc\201711\1.png" />
+				</div>
+			</section>
+            <section>
+                <div class="head">Webpack和Grunt/Gulp的比较</div>
+                <div class="content">
+                    Webpack 是一种模块化的解决方案
+                    <img src="{{ BASE_PATH }}\articles\assets\images\2017-doc\201711\2.png" />
+				</div>
+			</section>
+            <section>
+                <div class="head">如何使用Webpack</div>
+                <div class="content">
+                    <div>//全局安装</div>
+                    <div>npm install –g webpack</div>
+                    <br>
+                    <div>//安装到当前项目</div>
+                    <div>npm install --save-dev webpack</div>
+				</div>
+			</section>
+            <section>
+                <div class="head">基础命令</div>
+                <div class="content">
+                    <div>webpack  {入口文件}  {打包输出文件}</div>
+                    <br>
+                    <div>仅需要指定一个入口文件，webpack将自动识别指定入口文件中所有的依赖 </div>
+				</div>
+			</section>
+            <section>
+                <div class="head">通过配置文件来使用</div>
+                <div class="content">
+                    <div>webpack.config.js</div>
+                    <br>
+                    <div>
+                        <pre>
+    module.exports = {
+        entry: "./app/main.js",//指定入口文件
+        output: {
+            path: __dirname + "/public",//文件输出目录
+            filename: "bundle.js"//输出文件的文件名
+        }
+    }
+                        </pre>
+                    </div>
+				</div>
+			</section>
+            <section>
+                <div class="head">更快捷的执行打包</div>
+                <div class="content">
+                    <div>通过npm引导任务执行</div>
+                    <div>在package.json的script部分添加webpack命令</div>
+                    <img src="{{ BASE_PATH }}\articles\assets\images\2017-doc\201711\3.png" />
+				</div>
+			</section>
+            <section>
+                <div class="head">四个核心概念</div>
+                <div class="content">
+                    <div class="font-bold">一、Entry(入口)</div>
+                    <br>
+                    <div>webpack 将创建应用程序所有依赖的关系图表(dependency graph)。</div>
+                    <div>图表的起点就是入口，入口文件将告诉webpack从哪里开始，并遵循依赖关系图表进行打包。</div>
+				</div>
+			</section>
+            <section>
+                <div class="head">四个核心概念</div>
+                <div class="content">
+                    <div class="font-bold">二、Output(出口)</div>
+                    <br>
+                    <div>指定webpack将打包后的资源输出的位置</div>
+				</div>
+			</section>
+            <section>
+                <div class="head">四个核心概念</div>
+                <div class="content">
+                    <div class="font-bold">三、Loaders(加载器)</div>
+                    <br>
+                    <div>Loaders会将对应的资源转换为模块，然后添加到依赖图表中。</div>
+                    <div>Loaders需要单独安装，并且需要在webpack.config.js的module.rules下进行配置</div>
+                    <div>test：匹配loader所处理的文件的正则表达式(必须)</div>
+                    <div>use：指定loader及配置其选项(必须)</div>
+                    <div>exclude：排除不需要处理的文件或者目录(可选)</div>
+				</div>
+			</section>
+            <section>
+                <div class="head">常用的Loaders</div>
+                <div class="sub-content" data-markdown data-template>
+                <script type="text/template">
+                    - 处理样式，转成css，如：less-loader, sass-loader
+                    - 图片处理，如: url-loader, file-loader。两个都必须用上。否则超过大小限制的图片无法生成到目标文件夹中 
+                    - 处理js，将es6或更高级的代码转成es5的代码。如： babel-loader，babel-preset-es2015，babel-preset-react
+                    - 将js模块暴露到全局，如果expose-loader
+                </script>
+                </div>
+			</section>
+            <section>
+                <div class="head">四个核心概念</div>
+                <div class="content">
+                    <div class="font-bold">四、 Plugins(插件)</div>
+                    <br>
+                    <div>Plugins是具有apply属性的js对象，apply会被webpack compiler调用，并且 compiler 对象可在整个 compilation 生命周期访问</div>
+                    <div>Plugins需要单独安装，并且需要在webpack.config.js的plugins下进行配置</div>
+				</div>
+			</section>
+            <section>
+                <div class="head">常用的Plugins</div>
+                <div class="sub-content" data-markdown data-template>
+                <script type="text/template">
+                    - 代码热替换, HotModuleReplacementPlugin
+                    - 生成html文件，HtmlWebpackPlugin 
+                    - 将css成生文件，而非内联，ExtractTextPlugin
+                    - 报错但不退出webpack进程，NoErrorsPlugin 
+                    - 代码丑化，UglifyJsPlugin，开发过程中不建议打开
+                    - 多个 html共用一个js文件(chunk)，可用CommonsChunkPlugin
+                    - 清理文件夹，Clean
+                    - 调用模块的别名ProvidePlugin，例如想在js中用$，如果通过webpack加载，需要将$ 与jQuery对应起来
+                </script>
+                </div>
+			</section>
+            <section>
+                <div class="head">如何调试</div>
+                <div class="content">
+                    <div>配置devtool，让webpack打包时生成source maps</div>
+                    <div>
+                        <table>
+                            <thead>
+                                <th width='20%'>devtool选项</th>
+                                <th>配置结果</th>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>source-map</td>
+                                    <td>在一个单独的文件中产生一个完整且功能完全的文件。这个文件具有最好的source map，但是它会减慢打包文件的构建速度；</td>
+                                </tr>
+                                <tr>
+                                    <td>cheap-module-source-map</td>
+                                    <td>在一个单独的文件中生成一个不带列映射的map，不带列映射提高项目构建速度，但是也使得浏览器开发者工具只能对应到具体的行，不能对应到具体的列（符号），会对调试造成不便；</td>
+                                </tr>
+                                <tr>
+                                    <td>eval-source-map</td>
+                                    <td>使用eval打包源文件模块，在同一个文件中生成干净的完整的source map。这个选项可以在不影响构建速度的前提下生成完整的sourcemap，但是对打包后输出的JS文件的执行具有性能和安全的隐患。不过在开发阶段这是一个非常好的选项，但是在生产阶段一定不要用这个选项；</td>
+                                </tr>
+                                <tr>
+                                    <td>cheap-module-eval-source-map</td>
+                                    <td>这是在打包文件时最快的生成source map的方法，生成的Source Map 会和打包后的JavaScript文件同行显示，没有列映射，和eval-source-map选项具有相似的缺点；</td>
+                                </tr>
+                            </tbody>  
+                        </table>
+                    </div>
+				</div>
+			</section>
+            <section>
+                <div class="head">文件修改监听</div>
+                <div class="content">
+                    <div>使用devserver搭建本地服务器，让浏览器监听代码的修改并自动刷新</div>
+                    <div>npm install –save-dev webpack-dev-server</div>
+                    <div>
+                        <table>
+                            <thead>
+                                <th width='20%'>devserver配置选项</th>
+                                <th>功能描述</th>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>contentBase</td>
+                                    <td>默认webpack-dev-server会为根文件夹提供本地服务器，如果想为另外一个目录下的文件提供本地服务器，应该在这里设置其所在目录（本例设置到“public"目录）</td>
+                                </tr>
+                                <tr>
+                                    <td>port</td>
+                                    <td>设置默认监听端口，如果省略，默认为"8080"</td>
+                                </tr>
+                                <tr>
+                                    <td>compress</td>
+                                    <td>设置为true，一切服务都启用gzip压缩</td>
+                                </tr>
+                                <tr>
+                                    <td>proxy</td>
+                                    <td>代理 URL</td>
+                                </tr>
+                                <tr>
+                                    <td>historyApiFallback</td>
+                                    <td>在开发单页应用时非常有用，它依赖于HTML5 history API，如果设置为true，所有的跳转将指向index.html</td>
+                                </tr>
+                            </tbody>  
+                        </table>
+                    </div>
+				</div>
+			</section>
+            <section>
+                <div class="head">参考文档</div>
+                <div class="content">
+                    <div>webpack中文文档：<a href="https://doc.webpack-china.org/" target="_blank">https://doc.webpack-china.org/</a></div>
+                    <div>webpack入门: <a href="http://www.jianshu.com/p/42e11515c10f" target="_blank">http://www.jianshu.com/p/42e11515c10f</a></div>
+                    <div>webpack原理与实战：<a href="http://web.jobbole.com/91653/" target="_blank">http://web.jobbole.com/91653/</a></div>
+				</div>
+			</section>
+            <section>
+				<div class="logo"><img src="{{ BASE_PATH }}\articles\assets\images\2017-doc\201711\webpack-logo.png"></div>
+				<div>Thanks</div>
+                <div style="font-size:18px;"><a href="{{ BASE_PATH }}\articles\">阅读更多文章</a></div>
+			</section>
+		</div>
+	</div>
+</body>
 
-{{ page.title }}
-===
->
-Landslide is primarily written in Python, but it's themes use:
-
- - HTML5
- - Javascript
- - CSS
-
- ---
-
- # Code Sample
-
- Landslide supports code snippets
-
-     !python
-     def log(self, message, level='notice'):
-         if self.logger and not callable(self.logger):
-             raise ValueError(u"Invalid logger set, must be a callable")
-
-         if self.verbose and self.logger:
-             self.logger(message, level)
