--- a/_posts/2018-03-22-小程序填坑记-1.md
+++ b/_posts/2018-03-22-小程序填坑记-1.md
@@ -8,7 +8,7 @@ category: 微信小程序
 ===
 > 很久没更了，原因之一是去年11月份上家公司解散后，加入了一个创业小团队，小团队嘛，大家都懂得，所以也就有了小程序的填坑之旅，好在辛苦了3个月，项目成功上线，得到用户的认可。原因之二是"王者农药"太费时间了，最近考虑要戒戒毒了。
 
-微信小程序的出现，一定程度上也解决了应用的跨平台，再加上微信这个流量巨大的入口，所以越来越多的应用都退出了微信小程序版本，前段时间微信小游戏的出现，更是让这种轻量级的应用+微信入口成为未来流行的一种流量变现方式。
+微信小程序的出现，一定程度上也解决了应用的跨平台，再加上微信这个流量巨大的入口，所以越来越多的应用都推出了微信小程序版本，前段时间微信小游戏的出现，更是让这种轻量级的应用+微信入口成为未来流行的一种流量变现方式。
 
 微信小程序的开发上手并不难，如果做过前端开发的同学，参考官方文档，应该都会很快能够进入开发。
 
